refactoring: layout bug fix

--- a/src/common.blocks/basket.scss
+++ b/src/common.blocks/basket.scss
@@ -9,7 +9,7 @@
 
   &__list {
     block-size: 582px;
-    overflow: scroll;
+    overflow: auto;
     padding: 0;
     margin: 0;
     flex-grow: 1;
