--- a/src/common.blocks/modal.scss
+++ b/src/common.blocks/modal.scss
@@ -31,6 +31,7 @@
     flex-grow: 1;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   &__title {
